# albums

./: .gitignore  Makefile  README.md  cspell.json  pyproject.toml  zensical.toml
.github/workflows/: build.yml  docs.yml  publish.yml  pyinstaller.yml
docs/: all_checks.md  changelog.md  check_and_fix.md  developing.md  ideas.md  import.md  index.md  sync.md  technical.md  usage.md
src/albums/: app.py  config.py  configuration.py  types.py
src/albums/checks/: all.py  base_check.py  checker.py  helpers.py  tag_policy.py
src/albums/cli/: check.py  checks_ignore.py  checks_notice.py  cli_context.py  collections_add.py  collections_remove.py  config.py  entry_point.py  import_command.py  init.py  list_albums.py  scan.py  sql.py  sync.py
src/albums/database/: connection.py  db_config.py  models.py  operations.py  orm.py  orm_helpers.py  schema.py  selector.py
src/albums/interactive/: configurator.py  image_table.py  interact.py  setup_check.py  setup_destination.py  setup_settings.py
src/albums/picture/: format.py  info.py  scan.py
src/albums/tagger/: aiff.py  asf.py  base_mutagen.py  flac.py  folder.py  helpers.py  id3.py  m4a.py  mp3.py  oggvorbis.py  picture.py  provider.py  types.py  universal.py  unreadable.py
src/albums/words/: make.py
tests/: helpers.py  test_checker.py  test_cli.py  test_configurator.py  test_database.py  test_scan.py  test_scanner.py
tests/checks/: test_check_fix_interactive.py
tests/checks/numbering/: test_check_disc_in_track_number.py  test_check_disc_numbering.py  test_check_invalid_track_disc_number.py  test_check_track_numbering.py  test_check_zero_pad_numbers.py  test_tag_policy.py  test_total_tags.py
tests/checks/path/: test_check_album_under_album.py  test_check_cover_filename.py  test_check_duplicate_pathname.py  test_check_file_extension.py  test_check_folder_name.py  test_check_illegal_pathname.py  test_check_track_filename.py
tests/checks/picture/: test_check_album_art.py  test_check_conflicting_embedded.py  test_check_cover_available.py  test_check_cover_dimensions.py  test_check_cover_embedded.py  test_check_cover_unique.py  test_check_duplicate_image.py  test_check_embedded_picture_metadata.py  test_check_invalid_image.py  test_check_picture_metadata.py
tests/checks/tags/: test_check_album_artist.py  test_check_album_tag.py  test_check_artist_tag.py  test_check_duplicate_album.py  test_check_unreadable.py  (+4 more)
tests/cli/: test_cli.py  test_cli_config.py  test_cli_sync.py  test_folder_context.py
tests/database/: test_database.py  test_database_config.py  test_selector.py
tests/fixtures/: create_library.py  empty_files.py
tests/picture/: test_picture.py
tests/tagger/: test_aiff.py  test_asf.py  test_flac.py  test_m4a.py  test_mp3.py  test_mp4.py  test_oggvorbis.py  test_picture.py  test_tagger.py
(+42 files in other folders)
