[project]
name = "albums"
description = "Manage music albums, automatically correct tags, organize and sync copies with interactive command line interface."
authors = [{name = "Ivan Cooper", email = "ivan@4levity.net"}]
requires-python = ">=3.12, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
readme = "README.md"
keywords = ["flac", "mp3", "id3", "vorbis", "tags", "music", "library"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/4levity/albums"
Repository = "https://github.com/4levity/albums"
Issues = "https://github.com/4levity/albums/issues"
Documentation = "https://4levity.github.io/albums/"
Changelog = "https://4levity.github.io/albums/changelog/"

[project.scripts]
albums = "albums.cli.entry_point:albums_group"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
exclude = ["typings"]
lint.extend-select = ["I"]

[tool.pyright]
ignore = ["tests", "**/typings"]
exclude = [".venv", "**/.*", "**/__*", "**/typings", "**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
stubPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.12"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-pyinstaller-plugin = { version = ">=2.0.0,<3.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/albums/__init__.py"] 

[tool.poetry-pyinstaller-plugin.targets]
albums = "src/albums/__main__.py"

[tool.poetry.dependencies]
python = "^3.12, <3.15"
humanize = "^4.15.0"
click = "^8.3.1"
platformdirs = "^4.5.1"
mutagen = "^1.47.0"
rich = "^14.2.0"
rich-click = "^1.9.5"
pyyaml = "^6.0.3"
pillow = "^12.1.0"
xxhash = "^3.6.0"
rich-pixels = "^3.0.1"
scikit-image = "^0.26.0"
pathvalidate = "^3.3.1"
prompt-toolkit = "^3.0.52"
sqlalchemy = "^2.0.48"
rbloom = "^1.5.4"
av = "^17.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
eralchemy = {extras = ["graphviz"], version = "^1.6.0"}
pytest-cov = "^7.0.0"
pymarkdownlnt = "^0.9.34"
zensical = "^0.0.18"
pyright = "^1.1.408"
pyinstaller = "^6.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
